# ugv

./: .gitignore  README.md  docker_run.sh  environment.sh  f_cost.txt  map_0.pcd
Docker/: Dockerfile
catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
catkin_ws/devel/include/husky_msgs/: HuskyStatus.h
catkin_ws/devel/lib/husky_base/: husky_node
catkin_ws/devel/lib/pkgconfig/: husky_base.pc  husky_bringup.pc  husky_control.pc  husky_description.pc  husky_gazebo.pc  husky_msgs.pc  husky_navigation.pc  husky_viz.pc
catkin_ws/src/mapping_and_odometry/gazebo_odom/: CMakeLists.txt  package.xml
catkin_ws/src/mapping_and_odometry/gps_imu_odometry/: CMakeLists.txt  package.xml
catkin_ws/src/navagation/move_base_navagation/: CMakeLists.txt  package.xml
catkin_ws/src/navagation/path_planning/: CMakeLists.txt  package.xml
catkin_ws/src/navagation/path_planning/launch/: control.launch  path_planning.launch
catkin_ws/src/navagation/path_planning/src/: .a_star.h.swp  a_star.cpp  a_star.h  control.py  path_planning.cpp
catkin_ws/src/navagation/path_planning/src/old/: a_star.py  a_star_slow.py  obs_avoidace.py
catkin_ws/src/path_planning/: CMakeLists.txt  package.xml
catkin_ws/src/perception/pcl_perception/: CMakeLists.txt
catkin_ws/src/perception/pcl_perception/launch/: local_map2d.launch  pcl_preprocessing.launch
catkin_ws/src/perception/pcl_perception/src/: pcl_ground_segmentation.cpp  pcl_preprocessing.cpp  pcl_triangle_mesh.cpp  save_pcd.cpp
catkin_ws/src/perception/pcl_perception/src/old/: scan_to_localmap_old.py
catkin_ws/src/perception/pointcloud_to_laserscan/: CMakeLists.txt
catkin_ws/src/point_cloud/pcl_perception/: CMakeLists.txt  package.xml
catkin_ws/src/point_cloud/pointcloud_to_laserscan/: CMakeLists.txt
catkin_ws/src/point_cloud/velodyne_perception/: CMakeLists.txt
catkin_ws/src/point_cloud/velodyne_perception/config/: gazebo.yaml
catkin_ws/src/point_cloud/velodyne_perception/launch/: pcl_preprocessing.launch
catkin_ws/src/point_cloud/velodyne_perception/src/: pcl_preprocessing.cpp
catkin_ws/src/robotx/PID_control/: CMakeLists.txt  package.xml
catkin_ws/src/robotx/path_planning/: README.md
catkin_ws/src/robotx/path_planning/totem_circle/: CMakeLists.txt  package.xml
catkin_ws/src/robotx/path_planning/totem_circle/launch/: totem_circling.launch
catkin_ws/src/robotx/path_planning/totem_circle/src/: totem_circling.py
catkin_ws/src/robotx/path_planning/totem_circle/srv/: SetTotemCircle.srv
catkin_ws/src/robotx/robotx/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/robotx/robotx_msgs/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/robotx/velodyne_perception/: CMakeLists.txt  package.xml
catkin_ws/src/robotx/velodyne_perception/config/: bamboo_lake.yaml  gazebo.yaml
catkin_ws/src/robotx/velodyne_perception/launch/: cluster_no_preprocess.launch  dock_normal.launch  pcl_cluster.launch  pcl_map.launch  pcl_preprocessing.launch  pcl_preprocessing_rviz.launch
catkin_ws/src/robotx/velodyne_perception/src/: mapping_tf.py  pcl_cluster.cpp  pcl_preprocessing.cpp  pcl_preprocessing_rviz.cpp
catkin_ws/src/sensors/vector_gps/: CMakeLists.txt  package.xml  setup.py
catkin_ws/src/sensors/zed/: .gitignore
catkin_ws/src/ugv/: CMakeLists.txt  package.xml
catkin_ws/src/ugv/launch/: CMakeLists.txt  a_star.launch  gazebo_odometry.launch  gps.launch  gps_odometry.launch  move_base_nav.launch  navagation.launch  odometry.launch  package.xml  planning.launch  point_to_laser.launch  rtabmap.launch  sensors.launch  test.launch  transfer_odom.launch  visual_odometry.launch
catkin_ws/src/ugv/params/: ukf.yaml
catkin_ws/src/velodyne_perception/: README.md
catkin_ws/src/velodyne_perception/config/: gazebo.yaml
settings/: SN10027781.conf  SN19090.conf  SN19093.conf  SN3593.conf
(+188 files in other folders)
